--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,13 @@
 /_book/
 /node_modules/
 
+# IDE support files
+/.classpath
+/.launch
 /.project
+/.settings
+/*.launch
+/*.tmproj
+/ivy*
+/eclipse 
+vx.json
